[gd_scene load_steps=2 format=3 uid="uid://cchpyltbsxxdl"]

[ext_resource type="Script" path="res://addons/command_graph/base/editors/expression_branch.gd" id="1_m1x3l"]

[node name="expression_branch" type="GraphNode"]
title = "Expression Branch"
show_close = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = true
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = true
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("1_m1x3l")

[node name="TrueLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "True:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Expression: "

[node name="ExpressionEditMarginContainer" type="MarginContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_right = 0

[node name="ExpressionEdit" type="LineEdit" parent="HBoxContainer/ExpressionEditMarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
expand_to_text_length = true

[node name="FalseLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "False:"
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="text_changed" from="HBoxContainer/ExpressionEditMarginContainer/ExpressionEdit" to="." method="synchronize" unbinds=1]
